Upgraded to Java 17, Jakarta EE 8, and Log4j2